--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,9 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
