--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@vueuse/components": "^10.5.0",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.6.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
